<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:background="@color/colorPrimary">

    <androidx.constraintlayout.widget.Group
            android:id="@+id/group_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:constraint_referenced_ids="progressBar_loading, textView_loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <ProgressBar
            android:id="@+id/progressBar_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:indeterminate="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/textView_loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/loading"
            android:textColor="#ffffff"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar_loading"
            app:layout_constraintVertical_bias="0.0"/>

    <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_weather_sunny"
            android:id="@+id/imageView_condition_icon"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="30dp"
            android:contentDescription="@string/condition_icon"/>
    <TextView
            android:text="@string/partly_cloudy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_condition"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textColor="#FFFFFF"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/textView_temperature"
            app:layout_constraintTop_toBottomOf="@+id/imageView_condition_icon"
            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.195"/>
    <TextView
            android:text="@string/_29_0_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_temperature"
            android:textColor="#FFFFFF"
            android:textSize="80sp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:fontFamily="sans-serif-light"
            android:layout_marginTop="315dp"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/feels_like_37_7_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_feels_like_temperature"
            android:textColor="#FFFFFF" android:textSize="18sp"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_temperature"
            android:layout_marginTop="16dp"
            app:layout_constraintHorizontal_bias="0.516"/>
    <TextView
            android:id="@+id/textView_location"
            android:text="@string/dar_es_salaam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:textSize="30sp"
            android:textColor="#FFDF15"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toTopOf="@+id/tv_precipitation"
            app:layout_constraintHorizontal_bias="0.509"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_feels_like_temperature"
            app:layout_constraintVertical_bias="0.276"/>
    <TextView
            android:text="@string/wind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv__wind"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="@+id/textView_wind"
            app:layout_constraintEnd_toEndOf="@+id/textView_wind"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_location"
            app:layout_constraintHorizontal_bias="0.392"/>
    <TextView
            android:text="@string/ene_20_2_kph"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_wind"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv__wind"
            android:layout_marginStart="56dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="@string/precipitation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_precipitation"
            android:textColor="#ffffff"
            android:layout_marginEnd="8dp"
            android:textStyle="bold"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.605"
            app:layout_constraintStart_toStartOf="@+id/textView_location"
            app:layout_constraintEnd_toEndOf="@+id/textView_location"
            app:layout_constraintTop_toBottomOf="@+id/textView_location" android:layout_marginTop="32dp"/>
    <TextView
            android:text="@string/_0_1_mm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_precipitation"
            android:textColor="#ffffff"
            android:textSize="14sp"
            app:layout_constraintHorizontal_bias="0.401"
            app:layout_constraintStart_toEndOf="@+id/textView_wind"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/textView_visibility"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_precipitation"/>
    <TextView
            android:text="@string/visibility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_visibility"
            android:textColor="#ffffff"
            app:layout_constraintStart_toStartOf="@+id/textView_visibility"
            app:layout_constraintEnd_toEndOf="@+id/textView_visibility"
            android:textStyle="bold"
            android:textSize="14sp"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView_location"
            app:layout_constraintHorizontal_bias="0.75"/>
    <TextView
            android:text="@string/_10_0_km"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView_visibility"
            android:textColor="#ffffff"
            android:textSize="14sp"
            android:layout_marginEnd="56dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_visibility"/>
</androidx.constraintlayout.widget.ConstraintLayout>